Bug 1903615 - Invoke post-update process with minimal/empty environment. r=bytesized,application-update-reviewers,spohl

When Firefox relaunches itself to finish updating, it sets a number of
environment variables that control the relaunch.  Background tasks
obey those environment variables (by design), but that is causing a
problem.  On Windows, post-update invokes the WDBA task
to (re-)register itself, and that is running in the default browsing
profile (gasp!), and that is flipping select preferences in the
default browsing profile (double gasp!).  Invoking the post-update
process with a minimal/empty environment should avoid this issue.

The callback application will continue to be invoked with the current
non-minimal environment.

Differential Revision: https://phabricator.services.mozilla.com/D216878